--- a/Aula08_42/assets/css/style.css
+++ b/Aula08_42/assets/css/style.css
@@ -1,5 +1,6 @@
 :root {
     --primary-color: rgb(156, 215, 219);
+    --primary-color-darker: rgb(84, 155, 160); 
 }
 
 * {
@@ -11,11 +12,45 @@ body {
     background: var(--primary-color);
     margin: 0;
     padding: 0;
+    font-size: 1.3em;
+    line-height: 1.5em;
 }
+
 
 .container {
     max-width: 640px;
     margin: 50px auto;
     background-color: antiquewhite;
     padding: 20px;
+    border-radius: 10px;
+
+form input, form label, form button {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+form input {
+    font-size: 24px;
+    height: 50px;
+    padding: 0 20px;
+}
+
+form input:focus {
+    outline: 1px solid var(--primary-color)
+}
+
+form button {
+    border: none;
+    background: var(--primary-color);
+    color: white;
+    font-weight: 700;
+    font-size: 18px;
+    height: 50px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+form button:hover {
+    background: var(--primary-color-darker);
 }
