--- a/Aula08_42/assets/css/style.css
+++ b/Aula08_42/assets/css/style.css
@@ -24,6 +24,8 @@ body {
     padding: 20px;
     border-radius: 10px;
 
+}  
+
 form input, form label, form button {
     display: block;
     width: 100%;
